<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoiceModule</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">开始测试！</string>
    <string name="speak">语音调试键</string>
    <string name="uptest">up</string>
    <string name="downtest">down</string>
    <string name="righttest">right</string>
    <string name="lefttest">left</string>
    <string name="lefteye">左眼：</string>
    <string name="righteye">右眼：</string>
    <string name="back">返回</string>
    <string name="resulttitle">您的视力：</string>
    
    <string name="status">状态：</string>
    <string name="volume">音量</string>
    <string name="cancel">取消</string>
    <string name="tofinish">说完</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="in_recog">正在识别</string>
    <string name="error_occur">出错: 0x%1$s</string>
    <string name="error_start">启动失败: 0x%1$s</string>
</resources>
