<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
	    android:id="@id/testtitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />
	<ImageView
        android:id="@id/image"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"></ImageView>   
    <Button 
        android:id="@+id/uptest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/uptest"></Button>
     <Button 
        android:id="@+id/downtest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/downtest"></Button>
      <Button 
        android:id="@+id/righttest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/righttest"></Button>
       <Button 
        android:id="@+id/lefttest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lefttest"></Button>
       
    

</LinearLayout>
